objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Macaron_Flavor__c</fullName>
        <defaultValue>CASE(MONTH(TODAY()),1, "Gingerbread",2, "Strawberry",4, "Chocolate",7, "Raspberry",11, "Pumpkin",12, "Mint", "Vanilla")</defaultValue>
        <label>Macaron Flavor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gluten_Free__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Flavors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gluten_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gluten Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shirt__c</fullName>
        <label>Shirt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flavors</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>